--- a/netlify.toml
+++ b/netlify.toml
@@ -2,3 +2,8 @@
   from = "/*"
   to = "/index.html"
   status = 200
+
+ [[redirects]]
+  from = "/api*"
+  to = "https://damp-thicket-92600.herokuapp.com/"
+  status = 200
