--- a/netlify.toml
+++ b/netlify.toml
@@ -7,3 +7,5 @@
   from = "/api*"
   to = "https://damp-thicket-92600.herokuapp.com/"
   status = 200
+  force = true
+  headers = {X-From = "Netlify"}
