--- a/netlify.toml
+++ b/netlify.toml
@@ -1,5 +1,6 @@
 [[redirects]]
-  from = "/api/*"
-  to = "https://damp-thicket-92600.herokuapp.com/"
+  from = "/*"
+  to = "/index.html"
   status = 200
-  force = true
+
+  
