--- a/netlify.toml
+++ b/netlify.toml
@@ -3,4 +3,8 @@
   to = "/index.html"
   status = 200
 
-  
+  [[redirects]]
+  from = "/api/*" 
+  to = "https://api.mysearch.com"
+  status = 200
+  force = true 
