--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "firebase": "^8.1.1",
     "html-to-react": "^1.4.5",
     "moment": "^2.29.1",
+    "netlify-lambda": "^2.0.1",
     "react": "^17.0.1",
     "react-calendar": "^3.2.1",
     "react-dom": "^17.0.1",
